# wechat-backup

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  abe.dockerfile  api.http  build.sh  enmicromsg.go  go.mod  go.sum  hook.py  index.html  main.go  main_old.bak  main_test.go  silkV3-decoder.dockerfile  wcdb-parse-api.http  wcdb-sqlcipher.dockerfile
.github/workflows/: release.yml
api/: api.go
dashboard/: package.json  pnpm-lock.yaml
db/: enmicromsg.go  message.go  message_test.go  requeststruct.go  resultstruct.go  wcdb.go  wxfileindex.go
server/: go.mod  main.go
silkv3-rs/: Cargo.toml  build.rs
silkv3-rs/src/: bindings.rs  lib.rs
static/: amrnb.min.js  asset-manifest.json  index.css  index.html  index.js  pcmdata.min.js
static/css/: index.css  (+2 more)
wechat-cli/: Cargo.toml
wechat-saver/: .env  Cargo.toml
wechat-saver/src/: common.rs  lib.rs  miui_backup.rs  neo_backup.rs  new_miui_backup.rs
wechat-saver/src/common/: account_base.rs  database.rs  ffmpeg.rs  file_path_base.rs  http_client.rs  model.rs  msg_type.rs  preferences_base.rs  sync_cloud_base.rs  utils.rs  voice_decode.rs
wechat-saver/src/miui_backup/: account.rs  android_backup.rs  databases.rs  file_arch.rs  wx_file_index.rs
wechat-saver/src/miui_backup/databases/: wechat_db.rs  wechat_saver_db.rs
wechat-saver/src/neo_backup/: account.rs  file_path.rs  preferences.rs  sync_cloud.rs  unpack_file.rs
wechat-saver/src/new_miui_backup/: account.rs  file_path.rs  preferences.rs  sync_cloud.rs  unpack_file.rs
wechat-saver/tests/: wechat_test.rs
wechat-saver/tests/common/: mod.rs
(+15 files in other folders)
